Добавил код для статьи № 116

--- a/Shared SwiftUI Content/Localization/InfoPlist.xcstrings
+++ b/Shared SwiftUI Content/Localization/InfoPlist.xcstrings
@@ -31,6 +31,24 @@
           }
         }
       }
+    },
+    "NSCameraUsageDescription" : {
+      "comment" : "Privacy - Camera Usage Description",
+      "extractionState" : "extracted_with_value",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "For taking photos"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Для создания фото"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
