--- a/Shared SwiftUI Content/Localization/Localizable.xcstrings
+++ b/Shared SwiftUI Content/Localization/Localizable.xcstrings
@@ -257,6 +257,9 @@
     "Второй экран" : {
 
     },
+    "Выбрать из галереи" : {
+
+    },
     "Выйти" : {
 
     },
@@ -303,6 +306,9 @@
 
     },
     "Добавить в календарь" : {
+
+    },
+    "Добавить фото" : {
 
     },
     "Заглушка для ScrollView без крутых фичей" : {
@@ -495,6 +501,9 @@
 
     },
     "Сгенерировать число" : {
+
+    },
+    "Сделать фото" : {
 
     },
     "Скрыть" : {
