Добавил код для статьи № 118

--- a/Shared SwiftUI Content/Localization/Localizable.xcstrings
+++ b/Shared SwiftUI Content/Localization/Localizable.xcstrings
@@ -125,7 +125,13 @@
     "allowsHitTesting" : {
 
     },
+    "Change" : {
+
+    },
     "Change color" : {
+
+    },
+    "Content transition" : {
 
     },
     "Dark mode preview" : {
@@ -264,6 +270,9 @@
 
     },
     "Выключить скролл" : {
+
+    },
+    "Вычесть" : {
 
     },
     "Вьюха № %lld" : {
@@ -479,6 +488,9 @@
     "Понятно" : {
 
     },
+    "Прибавить" : {
+
+    },
     "Профиль" : {
 
     },
@@ -555,6 +567,9 @@
 
     },
     "Цвет тени" : {
+
+    },
+    "Число: %lld" : {
 
     },
     "Что ищем?" : {
