Добавил материалы для статьи № 120

--- a/Shared SwiftUI Content/Localization/Localizable.xcstrings
+++ b/Shared SwiftUI Content/Localization/Localizable.xcstrings
@@ -125,13 +125,7 @@
     "allowsHitTesting" : {
 
     },
-    "Change" : {
-
-    },
     "Change color" : {
-
-    },
-    "Content transition" : {
 
     },
     "Dark mode preview" : {
@@ -215,6 +209,9 @@
     "Авторизация" : {
 
     },
+    "Авторизован ✅" : {
+
+    },
     "Авторизоваться" : {
 
     },
@@ -243,6 +240,9 @@
 
     },
     "Внутри: %@" : {
+
+    },
+    "Войти" : {
 
     },
     "Вперед в SwiftUI" : {
@@ -302,6 +302,9 @@
     "Дата и время" : {
 
     },
+    "Демо из документации" : {
+
+    },
     "Демо-состояние" : {
 
     },
@@ -312,6 +315,9 @@
 
     },
     "Длинный заголовок не умещается в кнопку назад" : {
+
+    },
+    "Добавить" : {
 
     },
     "Добавить в календарь" : {
@@ -395,10 +401,16 @@
     "Начать сначала" : {
 
     },
+    "Не авторизован ❌" : {
+
+    },
     "Необходимо разрешить полный доступ к календарю в настройках телефона" : {
 
     },
     "Новости" : {
+
+    },
+    "Новые сообщения: %lld" : {
 
     },
     "Обновления друзей" : {
@@ -494,6 +506,9 @@
     "Профиль" : {
 
     },
+    "Прочитать все" : {
+
+    },
     "Пуск" : {
 
     },
@@ -534,6 +549,9 @@
 
     },
     "Снаружи: %@" : {
+
+    },
+    "Сообщения" : {
 
     },
     "Спейсинг: %@" : {
@@ -582,6 +600,9 @@
 
     },
     "Экран, обрабатывающий диплинк" : {
+
+    },
+    "Экшен" : {
 
     },
     "Элемент %lld" : {
