Добавил материалы для статьи № 121

--- a/Shared SwiftUI Content/Localization/Localizable.xcstrings
+++ b/Shared SwiftUI Content/Localization/Localizable.xcstrings
@@ -218,6 +218,9 @@
     "Большой элемент №6" : {
 
     },
+    "В настройки" : {
+
+    },
     "Вариант 1" : {
 
     },
@@ -249,6 +252,9 @@
 
     },
     "Вперед в UIKit" : {
+
+    },
+    "Время уведомлений" : {
 
     },
     "Все вьюхи ниже имеют тип `AnyView`" : {
@@ -317,6 +323,9 @@
     "Длинный заголовок не умещается в кнопку назад" : {
 
     },
+    "Для доступа к уведомлениям нужно войти в учетную запись" : {
+
+    },
     "Добавить" : {
 
     },
@@ -326,7 +335,13 @@
     "Добавить фото" : {
 
     },
+    "Ежедневные уведомления" : {
+
+    },
     "Заглушка для ScrollView без крутых фичей" : {
+
+    },
+    "Заголовок уведомления" : {
 
     },
     "Загружаем логи..." : {
@@ -405,6 +420,9 @@
 
     },
     "Необходимо разрешить полный доступ к календарю в настройках телефона" : {
+
+    },
+    "Нет доступа к уведомлениям" : {
 
     },
     "Новости" : {
@@ -564,6 +582,9 @@
 
     },
     "Текст" : {
+
+    },
+    "Тело уведомления" : {
 
     },
     "Тестируем тосты" : {
