Добавил код для статьи № 126
AppStorage для кастомных типов

--- a/Shared SwiftUI Content/Localization/Localizable.xcstrings
+++ b/Shared SwiftUI Content/Localization/Localizable.xcstrings
@@ -359,6 +359,9 @@
     "Закрыть %@" : {
 
     },
+    "Звук" : {
+
+    },
     "К последнему >" : {
 
     },
@@ -485,6 +488,9 @@
     "Перейти в настройки" : {
 
     },
+    "Перемешать" : {
+
+    },
     "Показать" : {
 
     },
@@ -537,6 +543,9 @@
 
     },
     "Сброс" : {
+
+    },
+    "Сбросить" : {
 
     },
     "Сбросить на ожидание" : {
